playground/fortigate-sdwan-internet/terraform/06-ubuntu.tf
###############################################################################################################
#
# FortiGate SD-WAN deployment
#
##############################################################################################################

##############################################################################################################
# Ubuntu HUB
##############################################################################################################

resource "azurerm_public_ip" "lnx_hub_pip" {
  name                         = "${var.PREFIX}-HUB-LNX-PIP"
  location                     = "${var.LOCATION}"
  resource_group_name          = "${azurerm_resource_group.resourcegroup.name}"
  allocation_method            = "Static"
  domain_name_label            = "${format("%s-%s", lower(var.PREFIX), "hub-lnx-pip")}"
}

resource "azurerm_network_interface" "lnx_hub_ifc" {
  name                            = "${var.PREFIX}-HUB-LNX-IFC"
  location                        = "${azurerm_resource_group.resourcegroup.location}"
  resource_group_name             = "${azurerm_resource_group.resourcegroup.name}"
  enable_ip_forwarding            = false
  enable_accelerated_networking   = true

  ip_configuration {
    name                          = "ipconfig1"
    subnet_id                     = "${azurerm_subnet.subnet5_hub.id}"
    private_ip_address_allocation = "static"
    private_ip_address            = "${var.lnx_ipaddress["1"]}"
    public_ip_address_id          = "${azurerm_public_ip.lnx_hub_pip.id}"
  }
}

resource "azurerm_virtual_machine" "lnx_hub_vm" {
  name                  = "${var.PREFIX}-HUB-LNX-VM"
  location              = "${azurerm_resource_group.resourcegroup.location}"
  resource_group_name   = "${azurerm_resource_group.resourcegroup.name}"
  network_interface_ids = ["${azurerm_network_interface.lnx_hub_ifc.id}"]
  vm_size               = "${var.lnx_vmsize}"

  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "18.04-LTS"
    version   = "latest"
  }

  storage_os_disk {
    name              = "${var.PREFIX}-HUB-LNX-OSDISK"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }

  os_profile {
    computer_name  = "${var.PREFIX}-HUB-LNX-VM"
    admin_username = "${var.USERNAME}"
    admin_password = "${var.PASSWORD}"
    custom_data    = "${data.template_file.lnx_hub_custom_data.rendered}"
  }

  os_profile_linux_config {
    disable_password_authentication = false
  }

  tags = {
    environment = "FortiGate-SDWAN"
  }
}

data "template_file" "lnx_hub_custom_data" {
  template = "${file("${path.module}/customdata-lnx-hub.tpl")}"

  vars = {
  }
}

data "azurerm_public_ip" "lnx_hub_pip" {
  name                = "${azurerm_public_ip.lnx_hub_pip.name}"
  resource_group_name = "${azurerm_resource_group.resourcegroup.name}"
}

#output "lnx_hub_public_ip_address" {
#  value = "${data.azurerm_public_ip.lnx_hub_pip.ip_address}"
#}
#
#output "lnx_hub_private_ip_address" {
#  value = "${azurerm_network_interface.lnx_hub_ifc.private_ip_address}"
#}



##############################################################################################################
# Ubuntu BRANCH 1
##############################################################################################################

resource "azurerm_public_ip" "lnx_branch1_pip" {
  name                         = "${var.PREFIX}-BRANCH1-LNX-PIP"
  location                     = "${var.LOCATION}"
  resource_group_name          = "${azurerm_resource_group.resourcegroup.name}"
  allocation_method            = "Static"
  domain_name_label            = "${format("%s-%s", lower(var.PREFIX), "branch1-lnx-pip")}"
}

resource "azurerm_network_interface" "lnx_branch1_ifc" {
  name                            = "${var.PREFIX}-BRANCH1-LNX-IFC"
  location                        = "${azurerm_resource_group.resourcegroup.location}"
  resource_group_name             = "${azurerm_resource_group.resourcegroup.name}"
  enable_ip_forwarding            = false
  enable_accelerated_networking   = true

  ip_configuration {
    name                          = "ipconfig1"
    subnet_id                     = "${azurerm_subnet.subnet4_branch1.id}"
    private_ip_address_allocation = "static"
    private_ip_address            = "${var.lnx_ipaddress["2"]}"
    public_ip_address_id          = "${azurerm_public_ip.lnx_branch1_pip.id}"
  }
}

resource "azurerm_virtual_machine" "lnx_branch1_vm" {
  name                  = "${var.PREFIX}-BRANCH1-LNX-VM"
  location              = "${azurerm_resource_group.resourcegroup.location}"
  resource_group_name   = "${azurerm_resource_group.resourcegroup.name}"
  network_interface_ids = ["${azurerm_network_interface.lnx_branch1_ifc.id}"]
  vm_size               = "${var.lnx_vmsize}"

  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "18.04-LTS"
    version   = "latest"
  }

  storage_os_disk {
    name              = "${var.PREFIX}-BRANCH1-LNX-OSDISK"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }

  os_profile {
    computer_name  = "${var.PREFIX}-BRANCH1-LNX-VM"
    admin_username = "${var.USERNAME}"
    admin_password = "${var.PASSWORD}"
    custom_data    = "${data.template_file.lnx_branch1_custom_data.rendered}"
  }

  os_profile_linux_config {
    disable_password_authentication = false
  }

  tags = {
    environment = "FortiGate-SDWAN"
  }
}

data "template_file" "lnx_branch1_custom_data" {
  template = "${file("${path.module}/customdata-lnx-branch1.tpl")}"

  vars = {
  }
}

##############################################################################################################
# Ubuntu BRANCH 2
##############################################################################################################

resource "azurerm_public_ip" "lnx_branch2_pip" {
  name                         = "${var.PREFIX}-BRANCH2-LNX-PIP"
  location                     = "${var.LOCATION}"
  resource_group_name          = "${azurerm_resource_group.resourcegroup.name}"
  allocation_method            = "Static"
  domain_name_label            = "${format("%s-%s", lower(var.PREFIX), "branch2-lnx-pip")}"
}

resource "azurerm_network_interface" "lnx_branch2_ifc" {
  name                            = "${var.PREFIX}-BRANCH2-LNX-IFC"
  location                        = "${azurerm_resource_group.resourcegroup.location}"
  resource_group_name             = "${azurerm_resource_group.resourcegroup.name}"
  enable_ip_forwarding            = false
  enable_accelerated_networking   = true

  ip_configuration {
    name                          = "ipconfig1"
    subnet_id                     = "${azurerm_subnet.subnet4_branch2.id}"
    private_ip_address_allocation = "static"
    private_ip_address            = "${var.lnx_ipaddress["3"]}"
    public_ip_address_id          = "${azurerm_public_ip.lnx_branch2_pip.id}"
  }
}

resource "azurerm_virtual_machine" "lnx_branch2_vm" {
  name                  = "${var.PREFIX}-BRANCH2-LNX-VM"
  location              = "${azurerm_resource_group.resourcegroup.location}"
  resource_group_name   = "${azurerm_resource_group.resourcegroup.name}"
  network_interface_ids = ["${azurerm_network_interface.lnx_branch2_ifc.id}"]
  vm_size               = "${var.lnx_vmsize}"

  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "18.04-LTS"
    version   = "latest"
  }

  storage_os_disk {
    name              = "${var.PREFIX}-BRANCH2-LNX-OSDISK"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }

  os_profile {
    computer_name  = "${var.PREFIX}-BRANCH2-LNX-VM"
    admin_username = "${var.USERNAME}"
    admin_password = "${var.PASSWORD}"
    custom_data    = "${data.template_file.lnx_branch2_custom_data.rendered}"
  }

  os_profile_linux_config {
    disable_password_authentication = false
  }

  tags = {
    environment = "FortiGate-SDWAN"
  }
}

data "template_file" "lnx_branch2_custom_data" {
  template = "${file("${path.module}/customdata-lnx-branch2.tpl")}"

  vars = {
  }
}

data "azurerm_public_ip" "lnx_branch1_pip" {
  name                = "${azurerm_public_ip.lnx_branch1_pip.name}"
  resource_group_name = "${azurerm_resource_group.resourcegroup.name}"
}

#output "lnx_branch1_public_ip_address" {
#  value = "${data.azurerm_public_ip.lnx_branch1_pip.ip_address}"
#}

data "azurerm_public_ip" "lnx_branch2_pip" {
  name                = "${azurerm_public_ip.lnx_branch2_pip.name}"
  resource_group_name = "${azurerm_resource_group.resourcegroup.name}"
}

#output "lnx_branch2_public_ip_address" {
#  value = "${data.azurerm_public_ip.lnx_branch2_pip.ip_address}"
#}
